# slack_bot

./: ..gitignore  .env  .gitignore  README.md  db.sqlite3  pyproject.toml
leaveapp/: admin.py  apiurls.py  apps.py  create_orm.py  form.py  models.py  slack_views.py  views.py
leaveapp/migrations/: 0001_initial.py  0002_auto_20200914_0750.py  0003_auto_20200914_0940.py  0004_auto_20200914_1451.py  0005_leave_leave_date.py  0006_auto_20200918_0830.py  0007_task.py  0008_auto_20200921_0556.py
project/: apiurls.py  settings.py  urls.py
project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
staticfiles/: staticfiles.json
